--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write src/**/*.tsx",
+    "lint": "eslint --fix src/**/*.tsx",
+    "test": "npm run typecheck && npm run format && npm run lint"
   },
   "dependencies": {
     "@portabletext/react": "^2.0.2",
@@ -35,9 +38,18 @@
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
     "gatsby-plugin-postcss": "^6.7.0",
     "postcss": "^8.4.21",
+    "prettier": "2.8.4",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5"
   }
