--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "typecheck": "tsc --noEmit",
     "format": "prettier --write src/**/*.tsx",
     "lint": "eslint --fix src/**/*.tsx",
-    "test": "npm run typecheck && npm run format && npm run lint"
+    "test": "npm run typecheck && npm run format && npm run lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@portabletext/react": "^2.0.2",
@@ -51,6 +52,7 @@
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "husky": "^8.0.0"
   }
 }
